CSS fixed for media on search page, when the media is max-760 the events will be centered on phone, instead of align top-top

--- a/src/components/musicEvents/MusicEvents.css
+++ b/src/components/musicEvents/MusicEvents.css
@@ -8,3 +8,11 @@
     justify-content: top;
     align-items: top;
 }
+
+@media (max-width: 760px) {
+    .musicEventsDisplayPage {
+        display: flex;
+        justify-content: center;
+        align-items: top;
+    }
+}
