--- a/src/components/showsEvents/ShowsEvents.css
+++ b/src/components/showsEvents/ShowsEvents.css
@@ -8,3 +8,12 @@
     justify-content: top;
     align-items: top;
 }
+
+
+@media (max-width: 760px) {
+    .showsEventsDisplayPage {
+        display: flex;
+        justify-content: center;
+        align-items: top;
+    }
+}
